[package]
name = "ormat"
version = "0.1.0"
edition = "2021"
authors = ['thinkgo <thinkgo@aliyun.com>']


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2.0.0"
console = "0.15.2"
dialoguer = "0.10.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"


